@@ -1,5 +1,9 @@
 2008-01-12  Sebastien Pouliot  <sebastien@ximian.com> 
 
+	* AvoidLongParameterListsTest.cs: Don't report defects for p/invokes
+
+2008-01-12  Sebastien Pouliot  <sebastien@ximian.com> 
+
 	* AvoidLongMethodsRule.cs: Use new Location ctor.
 	* AvoidLongParameterListsRule.cs: Use new Location ctor. Change 
 	two methods to static.
